# normal-oj

./: Cargo.toml  README.md
.devcontainer/: docker-compose.yml
.github/workflows/: ci.yaml
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20240430_100035_add_users_role.rs  m20240502_121640_add_users_displayed_name.rs  m20240502_122830_add_users_bio.rs  m20240502_130956_courses.rs  m20240510_081433_index_users_unique_name.rs  m20240525_133501_problems.rs  m20240608_160157_submissions.rs  m20240609_093230_problem_tasks.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  courses.rs  mock.rs  mod.rs  problems.rs  submissions.rs  user.rs
src/fixtures/: courses.yaml  users.yaml
src/models/: courses.rs  language.rs  mod.rs  submissions.rs  users.rs
src/models/_entities/: courses.rs  mod.rs  prelude.rs  problem_descriptions.rs  problem_tasks.rs  problems.rs  sea_orm_active_enums.rs  submissions.rs  users.rs
src/models/problems/: descriptions.rs  mod.rs  tasks.rs  test_case.rs
src/views/: mod.rs  problems.rs  submission.rs  user.rs
tests/: mod.rs
tests/models/: mod.rs  submissions.rs  users.rs
tests/models/snapshots/: can_create_with_password@users.snap  can_find_by_pid@users.snap  can_find_by_username@users-2.snap
tests/requests/: auth.rs  mod.rs  notes.rs  prepare_data.rs  problems.rs  submissions.rs  user.rs
tests/requests/snapshots/: admin_can_add_user@user_request-2.snap  admin_can_add_user@user_request.snap  admin_can_add_user_by_new_user@example.com_and_new_user@user_request.snap  (+10 more)
tests/tasks/: seed.rs
