[workspace]

[package]
name = "normal_oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-rs = "0.5.0"
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = { version = "0.7.1", features = ["multipart"] }
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
csv = "1.3.0"
thiserror = "1.0.59"
num-traits = "0.2"
num-derive = "0.4"
zip = "2.1.3"
time = "0.3.36"

[[bin]]
name = "normal_oj-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.5.0", features = ["testing"] }
insta = { version = "1.34.0", features = [
  "redactions",
  "yaml",
  "filters",
  "json",
] }
axum-test = "14.3.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
